[metadata]
name = pybn
version = 0.0.1
author = Mario Franco
author_email = mfrancom88@gmail.com
description = A package for Boolean Network research.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nogarx/PyBN
project_urls =
    Bug Tracker = https://github.com/Nogarx/PyBN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pybn
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src